--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "blindtext.doc.tar.xz": 676107b353812f55545bd714ed191111c9e2daf3
-  "blindtext.source.tar.xz": 9b3ab475b768ee63553f170a44680cedaebc5fb0
-  "blindtext.tar.xz": ab18d42bb1b017c2c44bcaddb980db5121a45701
+  blindtext.doc.tar.xz: 6b0b6c015ae03bdbb970055f1513007e43ca4b3c
+  blindtext.source.tar.xz: a6cc68ccda092a30bcb80220dd5f3ddc2e8d4c2e
+  blindtext.tar.xz: 857523f0bfea4015c3a1382194e3bbb0c3e6b51c
